# START-virtu

./: .gitignore  README.md  pyproject.toml
backend/: README.md  backend.py  cehub_api.py  config.py  meteoblue_api.py  meteoblue_model.py  pyproject.toml  weather_algorithms.py
backend/model/llm_wrapper/: agent_caller.py  functions.json  readme.md
backend/model/llm_wrapper/domain_logic/: calculations.py  recommendations.py  risk_stats.py
backend/model/llm_wrapper/services/: current_weather_service.py  meteoblue_model.py  soil_service.py
backend/model/services/: compute.py
frontend/: README.md  analysis_options.yaml  pubspec.yaml
frontend/android/: build.gradle.kts  settings.gradle.kts
frontend/android/app/: build.gradle.kts
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/backend_controllers/: BackendController.dart  backend_controller.dart
frontend/lib/controllers/: farm_data_controller.dart
frontend/lib/home/: home_view.dart
frontend/lib/map/: farm_widget.dart  map_controller.dart  map_view.dart
frontend/lib/models/: current_weather.dart  farm.dart  risk_stats.dart  soil_data.dart  weather.dart
frontend/lib/services/: api_manager.dart  app_data_manager.dart  preferences_manager.dart
model/: requirements.txt
model/data/: state_random_points.csv
model/llm_wrapper/: .env  agent_caller.py  functions.json
model/saved_models/: catboost_temp_forecast.cbm
model/services/: compute.py  coordinates_extractor.py  point_extractor.py  test_curl.py
model/training/: trainer.py
(+53 files in other folders)
