[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Samuel Surovka <80292277+ssurovka@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
black = "^25.1.0"
uvicorn = "^0.34.0"
requests = "^2.32.3"
pydantic-settings = "^2.8.1"
meteoblue-dataset-sdk = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
backend = "backend:serve"
