[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Samuel Surovka <80292277+ssurovka@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
black = "^25.1.0"
uvicorn = "^0.34.0"
numpy = "^2.2.4"
pandas = "^2.2.3"
langchain = "^0.3.21"
langchain-openai = "^0.3.9"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
backend = "backend:serve"
